Fix group--merged align-items

--- a/index.css
+++ b/index.css
@@ -391,6 +391,8 @@ button {
     flex-wrap: nowrap;
 }
 .group--merged {
+    flex-wrap: nowrap;
+    align-items: stretch;
     white-space: nowrap;
 }
 .group--merged > *:not(:last-child) {
